[gd_scene load_steps=9 format=3 uid="uid://dmyn7x4x173ad"]

[ext_resource type="Texture2D" uid="uid://duenvdoeawqea" path="res://art/tile2.png" id="1"]
[ext_resource type="Script" path="res://Tile.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cp3sjlreig0xa" path="res://art/tile_select.png" id="3"]
[ext_resource type="Texture2D" uid="uid://x5l76cnxg7rv" path="res://art/tile_available.png" id="4"]
[ext_resource type="Texture2D" uid="uid://klmons6l3p5q" path="res://art/tile_range.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bnb6g5qkppdtd" path="res://art/tile_available_range.png" id="6"]

[sub_resource type="CircleShape2D" id="1"]
radius = 406.409

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"avail",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"avail_range",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"blocked",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"range",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"select",
"speed": 5.0
}]

[node name="Tile" type="Node"]
script = ExtResource("2")

[node name="TileArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileArea"]
shape = SubResource("1")

[node name="Tile_Sprite" type="AnimatedSprite2D" parent="TileArea"]
sprite_frames = SubResource("2")
animation = &"avail_range"

[connection signal="input_event" from="TileArea" to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="TileArea" to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="TileArea" to="." method="_on_Tile_mouse_exited"]
